# euler

./: .gitignore  EulerMCP_Arch.txt  READMEmd  app.py  pyproject.toml  requirements.txt
src/euler_mcp/: __init__.py  conversation_processor.py  gradio_app.py  graph_engine.py  server.py
src/euler_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/euler_mcp/config/: __init__.py  filter_patterns.py  learning_patterns.py  topic_categories.py  topic_categories_pre.py
tests/: test_conversation_processor.py  test_full_system.py
