[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euler-mcp"
version = "0.1.0"
description = "MCP Server for creating interactive learning knowledge graphs"
authors = [{name = "ZahirJS", email = "andywork000@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "gradio>=4.0.0",
    "networkx>=3.0",
    "plotly>=5.0.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[project.scripts]
euler-mcp-server = "euler_mcp.server:main"
euler-mcp-gradio = "euler_mcp.gradio_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88